--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -27,7 +27,7 @@ html {
 	width: 100%;
 	font-size: 100%;
 	overflow-x: hidden;
-	scroll-behavior: auto !important;
+	// scroll-behavior: auto !important;
 }
 @media screen and (max-width: 992px) {
 	html {
@@ -103,11 +103,12 @@ a:hover {
 	position: fixed;
 	top: 0%;
 	left: 0%;
-	background: $themeColor2;
+	background: $themeColor;
 	width: 100%;
 	height: 72px;
 	border-bottom: 2px solid $themeColor3;
 	border-top: 1px solid $themeColor3;
+	z-index: 10;
 
 	ul {
 		li {
@@ -316,6 +317,34 @@ a:hover {
 	}
 }
 // SUPPORT BODY END
+
+// ABOUT BODY START
+.about_body_container {
+	margin-top: 8rem;
+
+	.btns {
+		background: #1f2937;
+		border: 1px solid #374151;
+		border-radius: 8px;
+	}
+
+	.upPara {
+		line-height: 26px;
+	}
+	.downPara {
+		line-height: 21px;
+	}
+	.bottomCont {
+		h6 {
+			line-height: 20px;
+		}
+	}
+
+	h5 {
+		line-height: 32px;
+	}
+}
+// ABOUT BODY END
 
 // MEDIA QUERIES START
 @media screen and (max-width: 998px) {
