all tablet done

--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -97,6 +97,10 @@ hr {
   padding: 1px;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 a:hover,
 a:hover {
   color: #e5e7eb;
@@ -333,7 +337,7 @@ a:hover {
 }
 
 .support_container {
-  height: calc(100vh - 160px);
+  margin-bottom: 56px;
   margin-top: 10rem;
 }
 
@@ -424,7 +428,7 @@ a:hover {
 
 .contact_container {
   margin-top: 9rem;
-  height: calc(100vh - 144px);
+  margin-bottom: 56px;
 }
 
 .contact_container h1 {
@@ -478,14 +482,18 @@ a:hover {
   height: 44px;
 }
 
+.contact_container .form_container input {
+  height: 38px;
+}
+
 .contact_container .form_container input,
 .contact_container .form_container textarea {
   background: #1f2937;
   border: 1px solid #374151;
   border-radius: 8px;
   color: #d1d5db;
-  height: 38px;
   font-size: 14px;
+  padding: 0px 12px;
 }
 
 .contact_container .form_container input:focus,
@@ -495,6 +503,8 @@ a:hover {
 
 .contact_container .form_container textarea {
   resize: none;
+  padding: 12px;
+  height: 185px;
 }
 
 .contact_container .form_container textarea:focus {
@@ -540,9 +550,9 @@ a:hover {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .header_container {
-    height: 95px;
+    height: 72px;
   }
   .hero_container {
     padding-top: 9rem;
@@ -550,25 +560,6 @@ a:hover {
   .hero_container h1 {
     font-size: 1.875rem;
     line-height: 30px;
-  }
-  .hero_container .btn_container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hero_container .btn_container a:nth-child(1) button,
-  .hero_container .btn_container a:nth-child(2) button {
-    width: 100%;
-  }
-  .hero_container .btn_container a:nth-child(2) button {
-    margin-top: 12px;
-  }
-  .services_container button {
-    width: 100%;
   }
   .started_container {
     height: 100%;
@@ -597,9 +588,6 @@ a:hover {
   .support_container {
     margin-top: 9rem;
   }
-  .started_container .first .btn_cont button {
-    width: 100%;
-  }
   .threeCards_container {
     padding: 12px 0rem 58px 0rem;
   }
@@ -615,13 +603,74 @@ a:hover {
   .contact_container .mtContact:nth-child(2) {
     margin-top: 20px;
   }
+  .header_container ul li {
+    margin: 0px 10px;
+  }
+  .footer_container ul li {
+    margin-left: 28px;
+  }
+  .started_container {
+    position: relative;
+  }
+  .started_container img {
+    position: absolute;
+    top: -25%;
+    right: -22%;
+    height: 323px;
+  }
+  .started_container .first {
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 668px) {
+  .started_container .first {
+    width: 64%;
+  }
+}
+
+@media screen and (max-width: 668px) {
+  .started_container .first {
+    width: 60%;
+  }
+  .started_container img {
+    position: absolute;
+    top: -19%;
+    right: -28%;
+    height: 350px;
+  }
 }
 
 @media screen and (max-width: 575px) {
+  .hero_container .btn_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero_container .btn_container a:nth-child(1) button,
+  .hero_container .btn_container a:nth-child(2) button {
+    width: 100%;
+  }
+  .hero_container .btn_container a:nth-child(2) button {
+    margin-top: 12px;
+  }
   .support_container a {
     width: 100%;
   }
   .support_container button {
+    width: 100%;
+  }
+  .header_container {
+    height: 95px;
+  }
+  .services_container button {
+    width: 100%;
+  }
+  .started_container .first .btn_cont button {
     width: 100%;
   }
 }
