--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -97,6 +97,11 @@ hr {
   padding: 1px;
 }
 
+.redColor {
+  color: #ff040d;
+  font-size: 12px;
+}
+
 .pointer {
   cursor: pointer;
 }
@@ -521,6 +526,11 @@ a:hover {
 
 .contact_container .mtContact:nth-child(2) {
   margin-top: 0px;
+}
+
+.contact_container input::-webkit-outer-spin-button,
+.contact_container input::-webkit-inner-spin-button {
+  display: none;
 }
 
 @media screen and (min-width: 1500px) {
