changes made and mailclimp added

--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -20,6 +20,7 @@ html {
   font-size: 100%;
   overflow-x: hidden;
   background: #161e2d;
+  scroll-behavior: auto !important;
 }
 
 @media screen and (max-width: 992px) {
@@ -542,6 +543,12 @@ a:hover {
 }
 
 @media screen and (max-width: 998px) {
+  .hero_container {
+    padding-top: 133px;
+  }
+  .support_container p {
+    font-weight: 400;
+  }
   .serviceBanner_container {
     margin-top: 7rem;
   }
@@ -558,6 +565,15 @@ a:hover {
   .serviceBanner_container {
     margin-top: 9rem;
   }
+  .support_container a {
+    width: 100%;
+  }
+  .support_container button {
+    width: 100%;
+  }
+  .support_container {
+    margin-top: 133px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -565,7 +581,7 @@ a:hover {
     height: 72px;
   }
   .hero_container {
-    padding-top: 9rem;
+    padding-top: 133px;
   }
   .hero_container h1 {
     font-size: 1.875rem;
@@ -583,20 +599,11 @@ a:hover {
   .serviceBanner_container .responsive_image {
     margin: -4rem 0rem -6rem 0rem;
   }
-  .support_container a {
-    width: 45%;
-  }
   .support_container {
     height: 100%;
   }
-  .support_container button {
-    width: 45%;
-  }
   .contact_container a {
     width: 100%;
-  }
-  .support_container {
-    margin-top: 9rem;
   }
   .threeCards_container {
     padding: 12px 0rem 58px 0rem;
@@ -652,6 +659,12 @@ a:hover {
 }
 
 @media screen and (max-width: 575px) {
+  .support_container {
+    margin-top: 154px;
+  }
+  .hero_container {
+    padding-top: 154px;
+  }
   .hero_container .btn_container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -667,12 +680,6 @@ a:hover {
   }
   .hero_container .btn_container a:nth-child(2) button {
     margin-top: 12px;
-  }
-  .support_container a {
-    width: 100%;
-  }
-  .support_container button {
-    width: 100%;
   }
   .header_container {
     height: 95px;
